# OpenConnect

./: .gitignore  cross-build.py
CompConnectIOS/CompConnectIOS/: AppDelegate.swift  CameraService.swift  GRPCClient.swift  KeyboardService.swift  ListDevices.swift  ListFeatures.swift  NotificationService.swift  PasteboardService.swift  SceneDelegate.swift  ViewController.swift
CompConnectIOS/CompConnectIOS.xcodeproj/: project.pbxproj
CompConnectIOS/CompConnectIOS.xcodeproj/project.xcworkspace/xcuserdata/niyaz.xcuserdatad/: UserInterfaceState.xcuserstate
CompConnectIOS/CompConnectIOS.xcodeproj/xcuserdata/niyaz.xcuserdatad/xcschemes/: xcschememanagement.plist
CompConnectIOS/CompConnectIOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
CompConnectIOS/ShareToComp/: Info.plist
Pc_Control_Android/: build_output.txt  settings.gradle.kts
Pc_Control_Android/app/: build.gradle.kts
Pc_Control_Android/app/src/androidTest/java/com/example/pc_control/: ExampleInstrumentedTest.kt
Pc_Control_Android/app/src/main/: AndroidManifest.xml
Pc_Control_Android/app/src/main/java/com/example/pc_control/: MainActivity.kt
Pc_Control_Android/app/src/main/java/com/example/pc_control/ui/theme/: Color.kt  Shapes.kt  Theme.kt  Type.kt
Pc_Control_Android/app/src/main/proto/: service.proto  types.proto
Pc_Control_Android/app/src/main/res/drawable/: ic_file.xml  ic_notification.xml  ic_pc.xml  ic_remote.xml  ic_sync.xml
Pc_Control_Android/app/src/main/res/values/: strings.xml  themes.xml
Pc_Control_Android/app/src/test/java/com/example/pc_control/: ExampleUnitTest.kt
Pc_Control_Android/gradle/: libs.versions.toml
Pc_Control_Android/gradle/wrapper/: gradle-wrapper.properties
common/: client.py  service.proto  types.proto
desktop/: CMakeLists.txt
desktop/common/: CMakeLists.txt
desktop/common/include/: clipboard_entry.h  file_entry.h  notification_entry.h
desktop/grpc_server/: CMakeLists.txt
desktop/grpc_server/include/: grpc_server.h  server.h
desktop/grpc_server/src/: grpc_server.cpp  server.cpp
desktop/processors/: CMakeLists.txt
desktop/processors/clipboard/: CMakeLists.txt  clipboard_processor.cpp  clipboard_processor.h
desktop/processors/filesystem/: CMakeLists.txt
desktop/processors/filesystem/include/: fs_processor.h
desktop/processors/filesystem/src/: fs_processor.cpp
desktop/processors/notification/: CMakeLists.txt  notification_processor.cpp  notification_processor.h
desktop/server/: CMakeLists.txt  main.cpp
desktop/server/include/: config.h  server.h
desktop/server/src/: server.cpp
desktop/udp_server/: CMakeLists.txt
desktop/udp_server/include/: udp_server.h
desktop/udp_server/src/: udp_server.cpp
